general cleanup (super what the fuck is going on)