@@ -315,10 +315,7 @@ public class TileEntityDoorGeneric extends TileEntityLockableBase implements ITi
 	//Ah yes piggy backing on this packet
 	@Override
 	public void setTextureState(byte tex){
-		if(tex > 0)
-			shouldUseBB = true;
-		else
-			shouldUseBB = false;
+        shouldUseBB = tex > 0;
 	}
 
 	@Override
@@ -380,12 +377,12 @@ public class TileEntityDoorGeneric extends TileEntityLockableBase implements ITi
 	
 	@Override
 	public List<String> getInEvents(){
-		return Arrays.asList("door_toggle");
+		return List.of("door_toggle");
 	}
 	
 	@Override
 	public List<String> getOutEvents(){
-		return Arrays.asList("door_open_state");
+		return List.of("door_open_state");
 	}
 	
 	@Override
